now layer name can be given from GUI

--- a/saveecobot_loader_dialog_base.ui
+++ b/saveecobot_loader_dialog_base.ui
@@ -72,7 +72,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>330</y>
+     <y>310</y>
      <width>661</width>
      <height>27</height>
     </rect>
@@ -101,7 +101,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>31</x>
-     <y>370</y>
+     <y>350</y>
      <width>681</width>
      <height>27</height>
     </rect>
@@ -130,7 +130,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>420</y>
+     <y>430</y>
      <width>671</width>
      <height>28</height>
     </rect>
@@ -155,14 +155,40 @@ p, li { white-space: pre-wrap; }
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>390</y>
+     <width>201</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Name of the imported layer:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditLayerName">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>391</y>
+     <width>251</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
+   </property>
+  </widget>
  </widget>
- <resources/>
  <tabstops>
   <tabstop>textBrowser</tabstop>
   <tabstop>sebDataUrlLineEdit</tabstop>
   <tabstop>sebMarkerDataUrlLineEdit</tabstop>
   <tabstop>dateTimeEdit</tabstop>
  </tabstops>
+ <resources/>
  <connections>
   <connection>
    <sender>button_box</sender>
